listings caption fix

--- a/sections/04-implementation.tex
+++ b/sections/04-implementation.tex
@@ -791,7 +791,7 @@ and statements, respectively, into the skeleton.
     float,
     name=map_skeleton,
     label=lst:map_skeleton,
-    caption={Accelerate CUDA skeleton for the @map@ operation}]
+    caption={Accelerate CUDA skeleton for the \code{map} operation}]
 [cunit|
     $esc:("#include <accelerate_cuda.h>")
     $edecls:texIn
@@ -962,7 +962,7 @@ embedded producer function. The second phase begins at the line marked
 \begin{lstlisting}[style=haskell
     ,float
     ,label=lst:mkfold
-    ,caption={Accelerate CUDA skeleton for the @foldAll@ operation}]
+    ,caption={Accelerate CUDA skeleton for the \code{foldAll} operation}]
 mkFoldAll :: (Shape sh, Elt e)
           => DeviceProperties
           -> Gamma aenv
